main/default/objects/Project_LOE__c/fields/Actual_People_Hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_People_Hours__c</fullName>
    <label>Actual People Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>