main/default/objects/Project_LOE__c/fields/Estimated_People_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_People_Hours__c</fullName>
    <description>Original Project Estimate (TShirt) for the level of effort for this project.</description>
    <inlineHelpText>Enter in the estimated level of effort for this project.  Initial estimate must be provided for Gate 0 approval and should be revised/verified prior to Gate 1 approval.</inlineHelpText>
    <label>Estimated People Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>