main/default/objects/Project_LOE__c/fields/Estimated_Time_to_Produce_Detailed_LOE__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_to_Produce_Detailed_LOE__c</fullName>
    <description>The estimated time it will take to review the user stories and provide an LOE that is +- 20%</description>
    <inlineHelpText>Enter in the estimated amount of time it will take for a detailed LOE to be provided for this effort.</inlineHelpText>
    <label>Estimated Time to Produce Detailed LOE</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>