main/default/objects/Project_LOE__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Enter in the scope and details to support your LOE here</inlineHelpText>
    <label>Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>