main/default/objects/Project_LOE__c/fields/Target_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Completion_Date__c</fullName>
    <description>Target completion date for this level of effort.</description>
    <inlineHelpText>Enter the target completion date for this level of effort.</inlineHelpText>
    <label>Target Completion Date</label>
    <type>Date</type>
</CustomField>