main/default/objects/Project_LOE__c/validationRules/TargetDate_MustBeLessThanGoLiveDate.validationRule-meta.xml
<ValidationRule>
    <fullName>TargetDate_MustBeLessThanGoLiveDate</fullName>
    <active>true</active>
    <description>The target date of the LOE must be less than or equal to the Go Live date of the project.</description>
    <errorConditionFormula>Target_Completion_Date__c  &gt;    Project__r.Customer_Commit_Date__c</errorConditionFormula>
    <errorDisplayField>Target_Completion_Date__c</errorDisplayField>
    <errorMessage>The target date must be less than or equal to the Go Live date of the project (field name Market_Ready__c)</errorMessage>
</ValidationRule>