main/default/objects/Project_LOE__c/listViews/IT_LOE_New_and_In_Process.listView-meta.xml
<ListView>
    <fullName>IT_LOE_New_and_In_Process</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Functional_Group__c</columns>
    <columns>Estimated_People_Hours__c</columns>
    <columns>Actual_People_Hours__c</columns>
    <columns>Earliest_Start_Date__c</columns>
    <columns>Target_Completion_Date__c</columns>
    <columns>Project_Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Functional_Group__c</field>
        <operation>startsWith</operation>
        <value>IT</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <label>IT LOE-New and In Process</label>
</ListView>